@@ -19,19 +19,20 @@ package org.apache.camel.component.azure.storage.datalake;
 import java.util.Map;
 import java.util.Set;
 
+import com.azure.core.credential.AzureSasCredential;
 import com.azure.identity.ClientSecretCredential;
 import com.azure.storage.common.StorageSharedKeyCredential;
 import org.apache.camel.CamelContext;
 import org.apache.camel.Endpoint;
 import org.apache.camel.spi.Metadata;
 import org.apache.camel.spi.annotations.Component;
-import org.apache.camel.support.DefaultComponent;
+import org.apache.camel.support.HealthCheckComponent;
 import org.apache.camel.util.ObjectHelper;
 
 @Component("azure-storage-datalake")
-public class DataLakeComponent extends DefaultComponent {
+public class DataLakeComponent extends HealthCheckComponent {
 
-    @Metadata(description = "configuration object for datalake")
+    @Metadata(description = "configuration object for data lake")
     private DataLakeConfiguration configuration = new DataLakeConfiguration();
 
     public DataLakeComponent() {
@@ -44,7 +45,7 @@ public class DataLakeComponent extends DefaultComponent {
     @Override
     protected Endpoint createEndpoint(String uri, String remaining, Map<String, Object> parameters) throws Exception {
 
-        if (remaining == null || remaining.trim().isEmpty()) {
+        if (remaining == null || remaining.isBlank()) {
             throw new IllegalArgumentException("At least the account name must be specified");
         }
 
@@ -67,7 +68,6 @@ public class DataLakeComponent extends DefaultComponent {
         setProperties(endpoint, parameters);
 
         setCredentialsFromRegistry(configuration);
-        validateConfiguration(configuration);
 
         return endpoint;
     }
@@ -86,23 +86,18 @@ public class DataLakeComponent extends DefaultComponent {
                     = getCamelContext().getRegistry().findByType(StorageSharedKeyCredential.class);
             final Set<ClientSecretCredential> clientSecretCredentials
                     = getCamelContext().getRegistry().findByType(ClientSecretCredential.class);
+            final Set<AzureSasCredential> sasCredentials
+                    = getCamelContext().getRegistry().findByType(AzureSasCredential.class);
 
             if (storageSharedKeyCredentials.size() == 1) {
                 configuration.setSharedKeyCredential(storageSharedKeyCredentials.stream().findFirst().get());
             }
-
             if (clientSecretCredentials.size() == 1) {
                 configuration.setClientSecretCredential(clientSecretCredentials.stream().findFirst().get());
             }
-
+            if (sasCredentials.size() == 1) {
+                configuration.setSasCredential(sasCredentials.stream().findFirst().get());
+            }
         }
     }
-
-    private void validateConfiguration(final DataLakeConfiguration config) {
-        if (config.getServiceClient() == null && config.getClientSecretCredential() == null
-                && config.getSharedKeyCredential() == null) {
-            throw new IllegalArgumentException("client or credentials must be specified");
-        }
-    }
-
 }
