@@ -19,7 +19,6 @@ package org.apache.camel.impl.health;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.camel.CamelContext;
 import org.apache.camel.CamelContextAware;
@@ -32,12 +31,13 @@ import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ReadinessAndLivenessTest {
 
     @Test
-    public void testLiveAndReady() throws Exception {
+    public void testLiveAndReady() {
         CamelContext context = new DefaultCamelContext();
 
         HealthCheckRegistry registry = new DefaultHealthCheckRegistry();
@@ -49,7 +49,7 @@ public class ReadinessAndLivenessTest {
         context.start();
         registry.start();
 
-        List<HealthCheck> checks = registry.stream().collect(Collectors.toList());
+        List<HealthCheck> checks = registry.stream().toList();
         assertEquals(2, checks.size());
 
         Collection<HealthCheck.Result> results = HealthCheckHelper.invokeReadiness(context);
@@ -58,7 +58,7 @@ public class ReadinessAndLivenessTest {
         assertEquals(HealthCheck.State.UP, result.getState());
         assertFalse(result.getCheck().isLiveness());
         assertTrue(result.getCheck().isReadiness());
-        assertTrue(result.getCheck() instanceof MyReadyCheck);
+        assertInstanceOf(MyReadyCheck.class, result.getCheck());
 
         results = HealthCheckHelper.invokeLiveness(context);
         assertEquals(1, results.size());
@@ -66,11 +66,11 @@ public class ReadinessAndLivenessTest {
         assertEquals(HealthCheck.State.DOWN, result.getState());
         assertTrue(result.getCheck().isLiveness());
         assertFalse(result.getCheck().isReadiness());
-        assertTrue(result.getCheck() instanceof MyLiveCheck);
+        assertInstanceOf(MyLiveCheck.class, result.getCheck());
     }
 
     @Test
-    public void testAll() throws Exception {
+    public void testAll() {
         CamelContext context = new DefaultCamelContext();
 
         HealthCheckRegistry registry = new DefaultHealthCheckRegistry();
@@ -81,7 +81,7 @@ public class ReadinessAndLivenessTest {
         context.start();
         registry.start();
 
-        List<HealthCheck> checks = registry.stream().collect(Collectors.toList());
+        List<HealthCheck> checks = registry.stream().toList();
         assertEquals(1, checks.size());
 
         Collection<HealthCheck.Result> results = HealthCheckHelper.invokeReadiness(context);
@@ -91,7 +91,7 @@ public class ReadinessAndLivenessTest {
         assertEquals("READINESS", result.getMessage().get());
         assertTrue(result.getCheck().isLiveness());
         assertTrue(result.getCheck().isReadiness());
-        assertTrue(result.getCheck() instanceof MyAllCheck);
+        assertInstanceOf(MyAllCheck.class, result.getCheck());
 
         results = HealthCheckHelper.invokeLiveness(context);
         assertEquals(1, results.size());
@@ -100,13 +100,18 @@ public class ReadinessAndLivenessTest {
         assertTrue(result.getCheck().isLiveness());
         assertTrue(result.getCheck().isReadiness());
         assertEquals("LIVENESS", result.getMessage().get());
-        assertTrue(result.getCheck() instanceof MyAllCheck);
+        assertInstanceOf(MyAllCheck.class, result.getCheck());
     }
 
     private static class MyReadyCheck extends AbstractHealthCheck implements CamelContextAware {
 
         protected MyReadyCheck(String group, String id) {
             super(group, id);
+        }
+
+        @Override
+        public boolean isReadiness() {
+            return true;
         }
 
         @Override
@@ -133,6 +138,11 @@ public class ReadinessAndLivenessTest {
         }
 
         @Override
+        public boolean isLiveness() {
+            return true;
+        }
+
+        @Override
         public void doCall(HealthCheckResultBuilder builder, Map<String, Object> options) {
             builder.down();
         }
@@ -143,6 +153,16 @@ public class ReadinessAndLivenessTest {
 
         protected MyAllCheck(String group, String id) {
             super(group, id);
+        }
+
+        @Override
+        public boolean isReadiness() {
+            return true;
+        }
+
+        @Override
+        public boolean isLiveness() {
+            return true;
         }
 
         @Override
