@@ -34,10 +34,10 @@ import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
 import org.apache.maven.project.MavenProjectHelper;
+import org.codehaus.plexus.build.BuildContext;
 import org.jboss.jandex.Index;
 import org.jboss.jandex.IndexWriter;
 import org.jboss.jandex.Indexer;
-import org.sonatype.plexus.build.incremental.BuildContext;
 
 /**
  * Generate a Jandex index for classes compiled as part of the current project.
@@ -74,22 +74,10 @@ public class PackageJandexMojo extends AbstractGeneratorMojo {
             return;
         }
         try (Stream<Path> pathStream = Files.walk(classesDirectory.toPath())) {
-            List<Path> inputs = pathStream.filter(f -> f.getFileName().toString().endsWith(".class"))
-                    .collect(Collectors.toList());
+            final List<Path> inputs = pathStream.filter(f -> f.getFileName().toString().endsWith(".class"))
+                    .toList();
             if (index.exists()) {
-                long lastmod = lastmod(index.toPath());
-                String stale = inputs.stream().filter(p -> lastmod(p) > lastmod).map(Path::toString)
-                        .collect(Collectors.joining(", "));
-                if (!stale.isEmpty()) {
-                    getLog().info("Stale files detected, re-generating index.");
-                    if (showStaleFiles) {
-                        getLog().info("Stale files: " + stale);
-                    } else if (getLog().isDebugEnabled()) {
-                        getLog().debug("Stale files: " + stale);
-                    }
-                } else {
-                    // everything is in order, skip
-                    getLog().info("Skipping index generation, everything is up to date.");
+                if (isUpToDate(inputs)) {
                     return;
                 }
             }
@@ -109,6 +97,32 @@ public class PackageJandexMojo extends AbstractGeneratorMojo {
         } catch (IOException e) {
             throw new MojoExecutionException(e.getMessage(), e);
         }
+    }
+
+    private boolean isUpToDate(List<Path> inputs) {
+        long lastMod = lastmod(index.toPath());
+
+        long staledFiles = inputs.stream().filter(p -> lastmod(p) > lastMod).count();
+
+        if (staledFiles > 0) {
+            getLog().info("Stale files detected, re-generating index.");
+
+            String stale = inputs.stream().filter(p -> lastmod(p) > lastMod).map(Path::toString)
+                    .collect(Collectors.joining(","));
+
+            if (showStaleFiles) {
+                getLog().info("Stale files: " + stale);
+            } else if (getLog().isDebugEnabled()) {
+                getLog().debug("Stale files: " + stale);
+            }
+
+            return false;
+        }
+
+        // everything is in order, skip
+        getLog().info("Skipping index generation, everything is up to date.");
+
+        return true;
     }
 
     private long lastmod(Path p) {
